<?xml version="1.0"?>
<package format="2">
  <name>read_yaml</name>
  <version>0.0.0</version>
  <description>The read_yaml package</description>
  <maintainer email="lemonsawa@todo.todo">lemonsawa</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>roslib</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
